# pytodoist

./: .flake8  .gitignore  .travis.yml  LICENCE  LICENCE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: Makefile
docs/source/: api.rst  conf.py  contribute.rst  credits.rst  history.rst  index.rst  modules.rst  pytodoist.rst  todoist.rst
pytodoist/: api.py  todoist.py
pytodoist/test/: api.py  test_api.py  test_todoist.py  todoist.py  util.py
