[bdist_wheel]
universal = 1

[metadata]
name = pytodoist
version = 2.0.2
author = Gary Blackwood
author-email = gary@garyblackwood.co.uk
summary = A python wrapper for the Todoist API.
description-file = README.rst
home-page = https://www.github.com/Garee/pytodoist
requires-dist = requests
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
